--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <li><a class="nav-link scrollto" href="#about">À propos</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
           <li><a class="nav-link scrollto " href="#portfolio">Nos Réalisations</a></li>
-          <li><a class="nav-link scrollto" href="#team">Équipe</a></li>
+          <li><a class="nav-link scrollto" href="team.html">Équipe</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -462,7 +462,46 @@
                 <p>boutiquez</p>
                 <div class="portfolio-links">
                  <!---<a href="assets/img/portfolio/illi1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>---> 
-                  <a href="https://boutiquez.com" title="More Details"> <button class="btn btn-danger">Visitez le site</button></a>
+                  <a href="https://blushboutiquez.com" title="More Details"> <button class="btn btn-danger">Visitez le site</button></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/arcomaritimo.png" class="img-fluid" alt="" style="height: 36vh;">
+              <div class="portfolio-info">
+                <h4>Arcomaritimo</h4>
+                <p>Arcomaritimo</p>
+                <div class="portfolio-links">
+                 <!---<a href="assets/img/portfolio/illi1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>---> 
+                  <a href="https://arcomaritimo.netlify.app/" title="More Details"> <button class="btn btn-danger">Visitez le site</button></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/dyscom_negoce.png" class="img-fluid" alt="" style="height: 36vh;">
+              <div class="portfolio-info">
+                <h4>dyscom négoce</h4>
+                <p>dyscomnegoce</p>
+                <div class="portfolio-links">
+                 <!---<a href="assets/img/portfolio/illi1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>---> 
+                  <a href="https://dyscomnegoce.com" title="More Details"> <button class="btn btn-danger">Visitez le site</button></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/kiva.png" class="img-fluid" alt="" style="height: 36vh;">
+              <div class="portfolio-info">
+                <h4>kiva</h4>
+                <p>kiva</p>
+                <div class="portfolio-links">
+                 <!---<a href="assets/img/portfolio/illi1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>---> 
+                  <a href="https://kiva.org" title="More Details"> <button class="btn btn-danger">Visitez le site</button></a>
                 </div>
               </div>
             </div>
@@ -521,20 +560,6 @@
               </div>
             </div>
           </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/dyscom.png" class="img-fluid" alt="" style="height: 36vh;">
-              <div class="portfolio-info">
-                <h4>dyscom-negoce</h4>
-                <p>dyscom-negoce</p>
-                <div class="portfolio-links">
-                  <!--- <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>---> 
-                  <a href="https://dyscom-negoce.netlify.app" title="More Details"> <button class="btn btn-danger">Visitez le site</button></a>
-                </div>
-              </div>
-            </div>
-          </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/abc.png" class="img-fluid" alt="" style="height: 36vh;">
@@ -544,6 +569,19 @@
                 <div class="portfolio-links">
                   <!--- <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>---> 
                   <a href="https://abcenter.netlify.app" title="More Details"> <button class="btn btn-danger">Visitez le site</button></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/labeldiplomatique.png" class="img-fluid" alt="" style="height: 36vh;">
+              <div class="portfolio-info">
+                <h4>lelabeldiplomatique</h4>
+                <p>lelabeldiplomatique</p>
+                <div class="portfolio-links">
+                  <!--- <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>---> 
+                  <a href="https://lelabeldiplomatique.netlify.app" title="More Details"> <button class="btn btn-danger">Visitez le site</button></a>
                 </div>
               </div>
             </div>
@@ -816,7 +854,7 @@
     </section><!-- End Frequently Asked Questions Section -->
 
     <!-- ======= Team Section ======= -->
-    <section id="team" class="team section-bg">
+    <section id="team" class="team section-bg" style="display: none;">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -869,7 +907,7 @@
             <div class="member" data-aos="fade-up" data-aos-delay="300">
               <div class="member-img">
                 <img src="assets/img/team/WhatsApp Image 2023-07-17 at 18.34.40.jpeg" 
-                style=" height: 50vh;"
+                style=" max-width: 50vh;"
                 class="img-fluid" alt="">
                  <!--<div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
