link of illicolove change

--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                 <p>illicolove.com</p>
                 <div class="portfolio-links">
                  <!---<a href="assets/img/portfolio/illi1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>---> 
-                  <a href="https://illicolove.com" title="More Details"> <button class="btn btn-danger">Visitez le site</button></a>
+                  <a href="https://illico.netlify.app" title="More Details"> <button class="btn btn-danger">Visitez le site</button></a>
                 </div>
               </div>
             </div>
