pricing fils add

--- a/index.html
+++ b/index.html
@@ -44,10 +44,11 @@
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Accueil</a></li>
+          <li><a class="nav-link scrollto active" href="index.html">Accueil</a></li>
           <li><a class="nav-link scrollto" href="#about">À propos</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto " href="#nosrealisations">Nos Réalisations</a></li>
+          <li><a class="nav-link scrollto " href="nosrealisations.html">Nos Réalisations</a></li>
+          <li><a class="nav-link scrollto" href="Pricing.html">Prix</a></li>
           <li><a class="nav-link scrollto" href="team.html">Équipe</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
@@ -699,65 +700,73 @@
       </div>
     </section><!-- End Testimonials Section -->
 
-    <!-- ======= Pricing Section ======= -->
-    <section id="pricing" class="pricing section-bg" style="display: none;">
+     <!-- ======= Pricing Section ======= -->
+     <section id="pricing" class="pricing section-bg">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
           <h2>Pricing</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.</p>
+          <p>Vous rêvez de propulser votre entreprise sur le web ? Découvrez nos packs sur-mesure, conçus pour vous offrir une présence en ligne professionnelle, 
+            efficace et percutante, à des prix adaptés à tous les besoins !</p>
         </div>
 
         <div class="row">
 
           <div class="col-lg-4 col-md-6">
             <div class="box" data-aos="fade-up" data-aos-delay="100">
-              <h3>Free</h3>
-              <h4><sup>$</sup>0<span> / month</span></h4>
-              <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li class="na">Pharetra massa</li>
-                <li class="na">Massa ultricies mi</li>
+              <h3>Basique</h3>
+              <h4>57 000 <sup>FCFA</sup></h4>
+              <ul class="listepack">
+                <li>🌐 Développement d'un site web moderne et responsive pour vous démarquer</li>
+                <li>💻 Hébergement 1 an en .com ou .net pour une visibilité optimale</li>
+                <li>📧 2 emails professionnels pour renforcer votre image de marque</li>
+                <li>🎨 Logo personnalisé offert pour une identité unique</li>
+                <li>📱 Page Facebook offerte pour commencer à communiquer avec vos clients</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a  class="btn-buy" id="57000" data-id="57000id" data-name="Basique" 
+                data-price="57000" data-info="💻Hébergement 1 an. 📧 2 emails professionnels. 🎨 Logo personnalisé offert et 📱 Page Facebook offerte.">
+                Achéter maintenant</a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 mt-4 mt-md-0">
             <div class="box featured" data-aos="fade-up" data-aos-delay="200">
-              <h3>Business</h3>
-              <h4><sup>$</sup>19<span> / month</span></h4>
-              <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li>Pharetra massa</li>
-                <li class="na">Massa ultricies mi</li>
+              <h3>Business Booster</h3>
+              <h4>100 000<sup> FCFA</sup> </h4>
+              <ul class="listepack">
+                <li>🌐 Développement d'un site web sur mesure avec des fonctionnalités avancées pour mieux répondre à vos besoins</li>
+                <li>💻 Hébergement pendant 2 ans en .com ou .net pour une stabilité sur le long terme</li>
+                <li>📧 8 emails professionnels pour une communication fluide et professionnelle</li>
+                <li>🎨 Logo design offert pour marquer les esprits</li>
+                <li>📱 Page Facebook offerte + création d'une page Instagram offerte pour doubler votre visibilité</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
-              </div>
+                <a class="btn-buy" data-id="100000id" data-name="Business Booster" 
+                data-price="100000" data-info="💻Hébergement 2 an. 📧 8 emails professionnels. 🎨 Logo personnalisé offert et 📱 Page Facebook offerte + Instagram.">
+                Achéter maintenant</a>
             </div>
           </div>
-
+          </div>
           <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
             <div class="box" data-aos="fade-up" data-aos-delay="300">
-              <h3>Developer</h3>
-              <h4><sup>$</sup>29<span> / month</span></h4>
-              <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li>Pharetra massa</li>
-                <li>Massa ultricies mi</li>
+              <h3>Édition Premium</h3>
+              <h4>130 000<sup> FCFA</sup></h4>
+              <ul class="listepack">
+                <li>🌐 Développement d'un site internet multilingue pour toucher un public international</li>
+                <li>💻 Hébergement pendant 2 ans en .com ou .net + serveurs sécurisés pour une performance optimale</li>
+                <li>📧 15 emails professionnels pour gérer toutes vos communications sans limite</li>
+                <li>🎨 Logo unique et sur mesure pour un branding mémorable</li>
+                <li>📱 Page Facebook + Instagram offertes pour renforcer votre présence sociale</li>
+                <li>🔒 Back office complet pour une gestion simple et autonome de votre site</li>
+                <li>🚀 Support technique premium inclus pendant 6 mois pour garantir votre tranquillité d’esprit</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
-              </div>
+                <a class="btn-buy" data-id="130000id" data-name="Édition Premium" 
+                data-price="130000" data-info="💻Hébergement 2 an. 📧 15 emails professionnels. 🎨 Logo personnalisé offert et 📱 Page Facebook offerte + Instagram. 🔒 Back office complet et 🚀 Support technique premium inclus.">
+                Achéter maintenant</a>
+            </div>
             </div>
           </div>
 
@@ -1144,6 +1153,7 @@
   <script src="https://cdn.kkiapay.me/k.js"></script>
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+  <script src="assets/js/feexpay.js"></script>
 
 </body>
 
