--- a/team.html
+++ b/team.html
@@ -6,7 +6,7 @@
     <title>Équipe</title>
     <link rel="stylesheet" href="team.css">
       <!-- Favicons -->
-    <link href="assets/img/WhatsApp Image 2023-07-17 at 18.35.05.jpeg" rel="icon">
+    <link href="assets/img/logo_for_becare.jpeg" rel="icon">
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
     
     
