--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/WhatsApp Image 2023-07-17 at 18.35.05.jpeg" rel="icon">
+  <link href="assets/img/logo_for_becare.jpeg" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -36,7 +36,7 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top d-flex align-items-center">
     <div class="container d-flex align-items-center">
-      <h1 class="logo me-auto"><img src="assets/img/WhatsApp Image 2023-07-17 at 18.35.05.jpeg" 
+      <h1 class="logo me-auto"><img src="assets/img/logo_for_becare.jpeg" 
       style="width: 7vh; height: 10vh;"
       alt=""> <a href="index.html">Be<span style="margin-left: 0 !important;">Car</span><span>e</span></a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
