--- a/index.html
+++ b/index.html
@@ -1103,7 +1103,7 @@
       </div>
     </div>
   </footer><!-- End Footer https://web.facebook.com/profile.php?id=100090391924063 -->
-
+  <div id="render"></div>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
   <script>
     function validerSaisie(input) {
@@ -1160,6 +1160,7 @@
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
   <script src="assets/js/feexpay.js"></script>
+  <script src="https://api.feexpay.me/feexpay-javascript-sdk/index.js"></script>
 
 </body>
 
