--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
         <div class="col-xl-6">
           <h1>Une meilleure expérience numérique avec BeCare</h1>
           <h2>Nous sommes une équipe de designers talentueux qui créent des sites web.</h2>
-          <a href="https://docs.google.com/forms/d/e/1FAIpQLSc2QbgzyDHfOijIx4j8wWInPNk6ErXeBWeVl6V-9ffu0XnKxQ/viewform?usp=pp_url" class="btn-get-started scrollto">Commandez votre site</a>
+          <a href="https://docs.google.com/forms/d/e/1FAIpQLSc2QbgzyDHfOijIx4j8wWInPNk6ErXeBWeVl6V-9ffu0XnKxQ/viewform?usp=pp_url" 
+           style="background-color:rgb(21, 20, 46); border-color: rgb(10, 10, 161);" class="btn-get-started scrollto">Commandez votre site</a>
         </div>
       </div>
     </div>
