--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="container d-flex align-items-center">
       <h1 class="logo me-auto"><img src="assets/img/logo_for_becare.jpeg" 
       style="width: 7vh; height: 10vh;"
-      alt=""> <a href="index.html">Be<span style="margin-left: 0 !important;">Car</span><span>e</span></a></h1>
+      alt=""> <a href="index.html" style="color: white;">Be<span style="margin-left: 0 !important;">Car</span><span>e</span></a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt=""></a>-->
 
