--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
   <!-- Favicons -->
   <link href="assets/img/logo_for_becare.jpeg" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link rel="stylesheet" href="assets/cokie.css" />
+  <script src="assets/cokie.js" defer></script>
+  <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel="stylesheet" />
+ 
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -174,7 +178,7 @@
       </div>
     </section><!-- End About Section -->
     <img src="assets/img/team/web_V1.gif" alt="" class="imgAnim">
-    <img src="assets/img/team/web_V1.gif" alt="" class="imgAnim imgAnimCenter">
+    
     <img src="assets/img/team/web_V1.gif" alt="" class="imgAnimation">
     
     <!-- ======= Counts Section ======= -->
@@ -712,7 +716,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Pricing</h2>
+          <h2>Nos prix</h2>
           <p>Vous rêvez de propulser votre entreprise sur le web ? Découvrez nos packs sur-mesure, conçus pour vous offrir une présence en ligne professionnelle, 
             efficace et percutante, à des prix adaptés à tous les besoins !</p>
         </div>
@@ -1104,6 +1108,24 @@
       </div>
     </div>
   </footer><!-- End Footer https://web.facebook.com/profile.php?id=100090391924063 -->
+
+
+  <div class="wrapper">
+    <header>
+      <i class="bx bx-cookie"></i>
+      <h2>Les cookies</h2>
+    </header>
+
+    <div class="data">
+      <p>Ce site web utilise des cookies pour vous permettre d'avoir une expérience de navigation supérieure et plus pertinente sur le site web.</a></p>
+    </div>
+
+    <div class="buttons">
+      <button class="button" id="acceptBtn">Accepter</button>
+      <button class="button" id="declineBtn">Refuser</button>
+    </div>
+</div>
+
   <div id="render"></div>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
   <script>
